--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="description" content="Rohit Sharma - Freelance Videographer & Editor Portfolio">
     <title>Rohit Sharma - Videographer & Editor</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header id="main-header">
         <div class="container">
             <h1>Rohit Sharma</h1>
             <p>B.Tech (CSE) | Freelance Videographer & Editor</p>
         </div>
     </header>
 
-    <nav>
+    <nav id="navbar">
         <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
@@ -28,14 +28,14 @@
 
     <section id="about" class="container">
         <h2>About Me</h2>
-        <p>Hi! I'm Rohit Sharma, a passionate and results-driven B.Tech (CSE) student at Delhi Technical University. I have a strong foundation in video editing and production, with a keen eye for creating engaging and impactful content. As a freelancer, I love collaborating with clients and exceeding their expectations with creative video projects.</p>
+        <p>I am Rohit Sharma, a passionate and results-driven B.Tech (CSE) student at Delhi Technical University. I specialize in video editing and production, with a strong ability to create engaging content. I enjoy collaborating with clients to bring their creative ideas to life.</p>
     </section>
 
     <section id="skills" class="container">
         <h2>Skills</h2>
-        <ul>
-            <li>Video Editing: Adobe Premiere Pro, VN Edit, Capcut</li>
-            <li>Videography: Cinematic shots with Samsung S23</li>
+        <ul class="skills-list">
+            <li>Video Editing (Adobe Premiere Pro, VN Edit, Capcut)</li>
+            <li>Videography (Cinematic shots with Samsung S23)</li>
             <li>Communication & Collaboration</li>
             <li>Time Management & Problem Solving</li>
         </ul>
@@ -45,7 +45,7 @@
         <h2>Experience</h2>
         <div class="job">
             <h3>Freelance Videographer & Editor <span>(2024 - Present)</span></h3>
-            <p>Managed all aspects of video production, including shooting, editing, and post-production for various clients.</p>
+            <p>Managed all aspects of video production for clients, including shooting, editing, and post-production.</p>
         </div>
         <div class="job">
             <h3>Videography & Editing Intern <span>(2024)</span></h3>
@@ -71,5 +71,30 @@
     <footer>
         <p>© 2024 Rohit Sharma. All rights reserved.</p>
     </footer>
+
+    <script>
+        // Smooth scrolling for links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function(e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+
+        // Sticky Navbar
+        window.onscroll = function() {stickyNav()};
+        const navbar = document.getElementById("navbar");
+        const sticky = navbar.offsetTop;
+
+        function stickyNav() {
+            if (window.pageYOffset >= sticky) {
+                navbar.classList.add("sticky");
+            } else {
+                navbar.classList.remove("sticky");
+            }
+        }
+    </script>
 </body>
 </html>
