--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         </ul>
     </nav>
 
-    <section id="about" class="container">
+    <section id="about" class="container fade-in">
         <h2>About Me</h2>
         <p>I am Rohit Sharma, a passionate and results-driven B.Tech (CSE) student at Delhi Technical University. I specialize in video editing and production, with a strong ability to create engaging content. I enjoy collaborating with clients to bring their creative ideas to life.</p>
     </section>
 
-    <section id="skills" class="container">
+    <section id="skills" class="container fade-in">
         <h2>Skills</h2>
         <ul class="skills-list">
             <li>Video Editing (Adobe Premiere Pro, VN Edit, Capcut)</li>
@@ -41,7 +41,7 @@
         </ul>
     </section>
 
-    <section id="experience" class="container">
+    <section id="experience" class="container fade-in">
         <h2>Experience</h2>
         <div class="job">
             <h3>Freelance Videographer & Editor <span>(2024 - Present)</span></h3>
@@ -56,12 +56,12 @@
         </div>
     </section>
 
-    <section id="portfolio" class="container">
+    <section id="portfolio" class="container fade-in">
         <h2>Portfolio</h2>
         <p>Check out my work: <a href="https://drive.google.com/drive/folders/12OJoDAm3zokX99aUTDyAHrpMtjE_a33C" target="_blank">View Portfolio</a></p>
     </section>
 
-    <section id="contact" class="container">
+    <section id="contact" class="container fade-in">
         <h2>Contact Me</h2>
         <p>Email: <a href="mailto:rohit.rsware@gmail.com">rohit.rsware@gmail.com</a></p>
         <p>Phone: <a href="tel:+919811885542">+91 9811885542</a></p>
@@ -72,29 +72,6 @@
         <p>© 2024 Rohit Sharma. All rights reserved.</p>
     </footer>
 
-    <script>
-        // Smooth scrolling for links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function(e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
-
-        // Sticky Navbar
-        window.onscroll = function() {stickyNav()};
-        const navbar = document.getElementById("navbar");
-        const sticky = navbar.offsetTop;
-
-        function stickyNav() {
-            if (window.pageYOffset >= sticky) {
-                navbar.classList.add("sticky");
-            } else {
-                navbar.classList.remove("sticky");
-            }
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
