--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <div class="section" id="summary">
             <h2>Summary</h2>
-            <p>Highly motivated and results-oriented B.Tech. (CSE) first-year student with a strong foundation in video editing and production. Eager to leverage skills in shooting, editing, and software proficiency to contribute to a creative and collaborative team environment as a freelancer. Possesses a passion for learning and a commitment to delivering exceptional results that exceed client expectations.</p>
+            <p>I am a B.Tech. (CSE) first-year student with hands-on experience in video editing and production. Proficient in using Adobe Premiere Pro, Capcut, and VN to create high-quality videos. I have worked offline at MUN conferences, handling video production tasks such as shooting, editing, and post-production. I'm looking forward to applying my skills in a creative and collaborative environment as a freelancer.</p>
         </div>
 
         <div class="section" id="experience">
